# hypergraph_routing

./: LICENSE  README.md  REPRODUCING.md  pyproject.toml  requirements-lock.txt  requirements.txt  validation_notebook.ipynb
experiments/paper1/: algebraic_overlay.py  aol_constrained_routing.py  aom_3d_routing.py  covering_tower.py  derandomization.py  dynamic_adaptive.py  entanglement_routing.py  hierarchical_routing.py  multilayer_aol.py  sparse_overlay_routing.py
experiments/paper2/: block_routing.py  regime_condition_table.py  regime_validation_sweep.py  validate_fixes.py
experiments/paper3/: bb_beta_feasibility_probe.py  bb_code_comparison.py  crossover_boundary.py  crossover_data.csv  direct_simulation.py  empirical_routing_constant.py  kemp_large_n.py  konig_optimal_test.py  lp_direct_simulation.py  lp_random_voltage_sweep.py  lp_tanner_spectrum.py  lp_voltage_bands.py  nonqc_simulation.py  published_codes_comparison.py  shifted_cayley_barrier.py
hypergraph_routing_validation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
routing_lib/: __init__.py  _sparse_compat.py  blocks.py  codes.py  graphs.py  greedy.py  published_codes.py  routing.py  spectral.py  xu_scrambling.py
tests/: golden_outputs.txt  test_blocks.py  test_concentration.py  test_graphs.py  test_greedy.py  test_greedy_stall_n256.py  test_paper3_konig.py  test_paper3_spectral.py  test_routing_lib_smoke.py  test_spectral.py  test_v8_standalone.py
